--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
       <%= link_to 'Home', dashboard_path, class: 'nav-button' %>
       <%= link_to 'Servers', games_path, class: 'nav-button' %>
       <%= link_to 'Shop', shop_path, class: 'nav-button' %>
-      <%= link_to 'Game', games_path, class: 'nav-button' %>
+      <% if @current_game%>
+        <%= link_to 'Game', game_path(@current_game.id), class: 'nav-button' %>
+      <%end %>
       <%= link_to 'Settings', settings_path, class: 'nav-button' %>
       <%= link_to 'Logout', logout_path, method: :delete, class: 'nav-button' %>
     </div>
