--- a/app/views/games/_main.html.erb
+++ b/app/views/games/_main.html.erb
@@ -41,8 +41,8 @@
     };
 
     const cellColors = <%= raw @tiles.to_json %>;
-    const gameId = <%= @current_game.id %>
-    const characters = <%= raw @characters.to_json %>
+    const gameId = <%= @current_game.id %>;
+    let characters = <%= raw @characters.to_json %>;
     const currentCharacter = <%= raw @current_character.to_json %>;
     let current_position = [currentCharacter.x_position, currentCharacter.y_position];
 
@@ -205,7 +205,7 @@
           .catch(error => console.error("Error refreshing tile info:", error));
     }
 
-    function renderAllCharacters() {
+    async function renderAllCharacters() {
         const characterIcon = '@';
 
         // Refresh all tiles by removing previously rendered content
@@ -213,6 +213,16 @@
         for (const content of renderedContents) {
             content.remove();
         }
+
+        let response = (await fetch(`/characters`, {
+            method: 'GET',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRF-Token': csrfToken
+            },
+        }));
+
+        characters = (await response.json()).characters;
 
         // Render all characters on their respective tiles
         for (const character of characters) {
@@ -224,42 +234,6 @@
                 tile.appendChild(newContent);
             }
         }
-    }
-
-    function renderOnCurrentTile() {
-        const content = '🏠';
-
-        // Clear previous content if applicable
-        if (previous_position) {
-            const prevTileId = `tile-${previous_position[0]}-${previous_position[1]}`;
-            const prevTile = document.getElementById(prevTileId);
-            if (prevTile) {
-                // Remove only the rendered content, keep the button
-                const renderedContent = prevTile.querySelector('.rendered-content');
-                if (renderedContent) {
-                    prevTile.removeChild(renderedContent);
-                }
-            }
-        }
-
-        // Get the tile id corresponding to current_position
-        const tileId = `tile-${current_position[0]}-${current_position[1]}`;
-        const tile = document.getElementById(tileId);
-
-        // Check if the rendered content already exists, remove if necessary
-        const existingContent = tile.querySelector('.rendered-content');
-        if (existingContent) {
-            tile.removeChild(existingContent);
-        }
-
-        // Add new content to the tile without removing the button
-        const newContent = document.createElement('div');
-        newContent.className = 'rendered-content';
-        newContent.innerHTML = content; // Render the new content
-        tile.appendChild(newContent);
-
-        // Update the previous position
-        previous_position = [...current_position];
     }
 
     function move(direction) {
